The options were misalinged when testing in other devices. Wrap inputs and labels in a flex to fix this. Feedback font-size is same as the label font-size.

--- a/src/App.css
+++ b/src/App.css
@@ -332,7 +332,7 @@ li.questions:not(:first-child) {
 
 .choices {
   padding: 0 5px;
-  margin-top: 0.5rem;
+  margin-top: 5px;
 }
 
 .choices li {
@@ -341,17 +341,21 @@ li.questions:not(:first-child) {
   display:flex;
 }
 
-.choices label {
+div#answers {
   display: flex;
+  align-items: center;
 }
-
 
 input[type="radio"] {
-  transform: scale(0.8);
-  align-self: flex-start;
-  margin-top: 0.3rem;
-  margin-right: 5px;
+  align-self: baseline;
+  margin: 4px 5px 0 0;
 }
+
+.choices label {
+  display: flex;
+  align-items: baseline;
+}
+
 
 #buttons {
   display: flex;
@@ -388,7 +392,6 @@ button#submit{
 
 .feedback {
   font-weight: bold;
-  font-size: 1.5rem;
   padding-left: 5px;
   display: inline;
 }
